2010-02-23  Jesus Sanchez-Palencia  <jesus.palencia@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Need a final integration between QtLauncher and QGVLauncher
        https://bugs.webkit.org/show_bug.cgi?id=35292

        Add cloneWindow feature to QtLauncher, when running on QGraphicsView mode.

        * QtLauncher/main.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::~LauncherWindow):
        (LauncherWindow::init):
        (LauncherWindow::cloneWindow):
        (LauncherWindow::setupUI):

2010-02-23  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Dimitri Glazkov.

        Fix handling of check_wdiff_install when wdiff isn't installed.

        http://bugs.webkit.org/show_bug.cgi?id=35304

        * Scripts/webkitpy/layout_tests/port/chromium_mac.py:

2010-02-23  Leandro Pereira  <leandro@profusion.mobi>

        Reviewed by NOBODY.

        Fix false positives for 'delete *pointer' statements.
        http://webkit.org/b/35235

        * WebKitTools/Scripts/webkitpy/style/processors/cpp.py:

2010-02-23  Shinichiro Hamaji  <hamaji@chromium.org>

        Reviewed by Eric Seidel.

        [Gtk] Implement layoutTestController.numberOfPages
        https://bugs.webkit.org/show_bug.cgi?id=35228

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::numberOfPages):

2010-02-23  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] QtLauncher should not use internal JavaScriptCore and WebCore interfaces
        https://bugs.webkit.org/show_bug.cgi?id=35248

        * QtLauncher/QtLauncher.pro:
        * QtLauncher/utils.h:

2010-02-23  Daniel Bates  <dbates@rim.com>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=34439

        Prompts a person for their SVN username if not already cached (by Subversion).

        Currently, webkit-patch is unable to commit to the SVN repo. unless the